# LabProgrammazione

./: CMakeLists.txt  README.md  TaskManager.cpp  main.cpp  tasks.txt
src/: CMakeLists.txt  Task.h  TaskManager.cpp  TaskManager.h
tests/: CMakeLists.txt  TaskManagerTest.cpp  TaskTest.cpp
